@@ -227,6 +227,7 @@ Version 1.5
  - Add philio/Zipato pad02 Smart Dimmer E27 (Nechry)
  - Add Remotec ZXT-600IN AC MASTER (Nechry)
  - Add TKB TZ57 Two channel switch (Nechry)
+ - Add Qubino ZMNHYD1 Smart Plug 16A (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
